nmealogger (1.0-3) unstable; urgency=low

  * Delete uploaded log files after a while

 -- Martin Pihlak <martin.pihlak@gmail.com>  Tue, 09 Jul 2024 00:00:00 -0800

nmealogger (1.0-2) unstable; urgency=low

  * Migrate to Go
  * Add loguploader

 -- Martin Pihlak <martin.pihlak@gmail.com>  Sat, 02 Sep 2023 00:00:00 -0800

nmealogger (1.0-1) unstable; urgency=low

  * Initial release

 -- Martin Pihlak <martin.pihlak@gmail.com>  Sat, 02 Sep 2023 00:00:00 -0800