@@ -6,3 +6,4 @@
 override_dh_installsystemd:
 	dh_installsystemd --name=nmealogger
 	dh_installsystemd --name=logupload
+	dh_installsystemd --name=gpsdfilter
